--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.1",
 	"appid": "wx64c6c3ff48d1b425",
-	"projectname": "%E5%88%9B%E6%96%B0%E5%90%88%E4%BC%99%E4%BA%BA",
+	"projectname": "miniapp_agent",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
